added base responsitivity for tablet, fixed layout, added base styles, colors.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
  <div class="wrapper">
   <header>
     <div class="container">
-      <div class="top-nav">
-        <img src="assets/logo.svg" alt="Meet Logo">
-      </div>
+      <nav class="header-nav">
+        <a href="" class="nav-link">
+          <img src="assets/logo.svg" alt="Meet Logo" class="header-logo">
+        </a>
+      </nav>
     </div>
   </header>
   <main>
+    
     <section class="hero">
+      
     <div class="tablet-img">
       <img src="assets/tablet/image-hero.png" alt="">
     </div>
@@ -47,6 +51,8 @@
       <img src="assets/desktop/image-hero-right.png" alt="">
     </div>
     </section>
+
+    <!--  -->
   </main>
  </div>
 </body>
